# libperspesk

include/: common.h  pgl.h  shared.h
ios/: .gitignore  Makefile  getskia.sh  prepare-repack.sh  repack.sh
ios/libperspesk/libperspesk.xcodeproj/: project.pbxproj
ios/libperspesk/libperspesk.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/libperspesk/libperspesk.xcodeproj/project.xcworkspace/xcuserdata/keks.xcuserdatad/: UserInterfaceState.xcuserstate
ios/libperspesk/libperspesk.xcodeproj/xcuserdata/keks.xcuserdatad/xcschemes/: libperspesk.xcscheme  xcschememanagement.plist
ios/skiatestapp/skiatestapp/: AppDelegate.h  AppDelegate.m  MainView.h  MainView.mm  main.m
ios/skiatestapp/skiatestapp.xcodeproj/: project.pbxproj
ios/skiatestapp/skiatestapp.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/skiatestapp/skiatestapp.xcodeproj/project.xcworkspace/xcshareddata/: skiatestapp.xcscmblueprint
ios/skiatestapp/skiatestapp.xcodeproj/project.xcworkspace/xcuserdata/keks.xcuserdatad/: UserInterfaceState.xcuserstate
ios/skiatestapp/skiatestapp.xcodeproj/xcuserdata/keks.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios/skiatestapp/skiatestapp.xcodeproj/xcuserdata/keks.xcuserdatad/xcschemes/: skiatestapp.xcscheme  xcschememanagement.plist
linux/: .gitignore  CMakeLists.txt  Makefile  env  getskia.sh  libperspesk.version  mergelibs.sh  skia.patch
msvs/: .gitignore  Perspex.Skia.Win32.Native.sln  Perspex.Skia.Win32.Native.vcxproj  Perspex.Skia.Win32.Native.vcxproj.filters
src/: angle.cpp  droid.cpp  formatted_text.cpp  gl.cpp  linux.cpp  main.cpp  path.cpp  pview.mm  rendering_context.cpp  win32.cpp  window.cpp
